# app/Models/Merchandise.php
@@ -6,5 +6,13 @@ use Illuminate\Database\Eloquent\Model;
 
 class Merchandise extends Model
 {
-    //
+    protected $table = 'merchandise'; 
+
+    protected $fillable = [
+        'name',
+        'description',
+        'price',
+        'stock',
+        'image'
+    ];
 }
